--- a/package.json
+++ b/package.json
@@ -3,15 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jasmine & jasmine-node --verbose server_spec --forceexit --captureExceptions",
+    "model_test": "jasmine",
+    "postinstall": "node configure.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.7",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.0",
+    "moment": "^2.18.1",
     "morgan": "~1.7.0",
+    "nodemailer": "^4.0.1",
+    "pg-promise": "^5.5.4",
+    "randomstring": "^1.1.5",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "cli-color": "^1.1.0",
+    "jasmine": "^2.5.3",
+    "jasmine-node": "^1.14.5",
+    "pg-monitor": "^0.7.1"
   }
 }
