--- a/config.json
+++ b/config.json
@@ -2,11 +2,23 @@
   "development": {
     "initDb":   "postgres",
     "database": "quran",
-    "pgConnection": "postgres://postgres@localhost:5432/"
+    "pgConnection": "postgres://postgres@localhost:5432/",
+    "mailConfig": {
+      "service": "gmail",
+      "user": "ali.71hariri@gmail.com",
+      "pass": "*******",
+      "from": "'Quran Together Team' <ali.71hariri@gmail.com>"
+    }
   },
   "production": {
     "initDb":   "",
     "database": "quran",
-    "pgConnection": ""
+    "pgConnection": "",
+    "mailConfig": {
+      "service": "",
+      "user": "",
+      "pass": "",
+      "from": ""
+    }
   }
 }
