1- Change adminOnly flag to tokenNeeded and check req.user not null 2- Add another API test to test access denied when need req.user and req.user is null

--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
     "mailConfig": {
       "type": "SMTP",
       "service": "gmail",
-      "user": "*******",
-      "pass": "*******",
-      "from": "'Quran Together Team' <*******>"
+      "user": "ali.hariri1400@gmail.com",
+      "pass": "1$kamtar",
+      "from": "'Quran Together Team' <ali.hariri1400@gmail.com>"
     },
     "serverDetail": {
       "name": "QuranTogether",
