--- a/config.json
+++ b/config.json
@@ -11,6 +11,9 @@
         "user": "no-reply@mail.quran.parts",
         "pass": "2e$e2ha#wed$uQuRe_5p"
       },
+      "tls": {
+        "rejectUnauthorized": false
+      },
       "from": "Quran Together <no-reply@mail.quran.parts>"
     }
   },
