--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.1",
+    "cli-color": "^1.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
