--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "pg-monitor": "^0.7.1",
     "pg-promise": "^5.7.1",
     "randomstring": "^1.1.5",
+    "redis": "^2.7.1",
     "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "cli-color": "^1.1.0",
     "jasmine": "^2.5.3",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "loadtest": "*"
   }
 }
