--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "jsonwebtoken": "^7.4.0",
     "moment": "^2.18.1",
     "morgan": "~1.7.0",
+    "node-schedule": "^1.2.4",
     "nodemailer": "^4.0.1",
     "pg-monitor": "^0.7.1",
     "pg-promise": "^5.7.1",
     "randomstring": "^1.1.5",
     "redis": "^2.7.1",
     "request": "^2.79.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "cli-color": "^1.1.0",
