--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "randomstring": "^1.1.5",
     "redis": "^2.7.1",
     "request": "^2.79.0",
-    "serve-favicon": "~2.3.0",
-    "socket.io": "^2.0.3"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "cli-color": "^1.1.0",
